# BCI_Multi_Robot

./: .gitignore  LICENSE.md  README.md  bci_multi_robot.launch
matlab_test/: BCI_offline.fig  calculate_P.m  calculate_P_BCI.m  onlinedata_dw.mat  onlinedata_lxb.mat  onlinedata_lxbs2.mat  onlinedata_lyr.mat  onlinedata_lyr2.mat  predict_attack_strategy.m  predict_defend_strategy.m  result.fig  result_compare.m  result_with_update.fig  strategy_selection_attack.m  strategy_selection_defend.m
src/: CMakeLists.txt
src/bci_background/: CMakeLists.txt  package.xml
src/bci_background/scripts/BCI_core/GuiMachine/: block.py  gui.py  imagearray.py  imagebox.py  usb_camera1.py
src/bci_background/scripts/BCI_core/GuiMachine/KinectClient/: KinectCalibration.py  KinectClient.py  groundfilter_param.txt  kinect_camera.py  process_op.py  pygame_anchors.py  usb_camera.py
src/bci_background/scripts/BCI_core/GuiMachine/KinectClient/KinectBase source/: KinectBase.sln
src/bci_background/scripts/BCI_core/GuiMachine/KinectClient/KinectBase source/KinectDriver/: App.xaml  App.xaml.cs  KinectBase.csproj  MainWindow.xaml  MainWindow.xaml.cs  ReadParam.cs  ShareMem.cs  tem2rgb.cs  tem_rgb.txt
src/bci_background/scripts/BCI_core/GuiMachine/KinectClient/KinectBase source/KinectDriver/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/bci_background/scripts/BCI_core/core/: amp_actichamp.py  amp_actichamp_q.py  amp_simulator.py  bm_core.py  bm_phase.py  bm_sigpro.py  storage.py
src/bci_background/scripts/src/python/: AsynExp.py  AsynExp_copy.py  nontarget_score_offline.mat  nontarget_score_offline_1_lxb.mat  test.py
src/bci_background/scripts/src/python/SSVEP/BCI2000Viewer/: BCI2000Viewer.html
src/bci_background/scripts/src/python/SSVEP/batch/: online.bat  online1.bat  replay - 副本.bat  replay.bat  server - 副本.bat  server.bat
src/bci_background/scripts/src/python/SSVEP/offlineprocess/: FFT.m  dat2mat.m  getInfo.m  load_bcidat.m  load_bcidat.mexw64  nontargetprocess.m  result_record.mat  ssvep_cca.m  ssvep_cca_rv.m  ssvep_cca_rv_online.m  sts.mat
src/bci_background/scripts/src/python/SSVEP/parms/: lxb.prm  lxb1.prm  test.prm
src/bci_background/scripts/src/python/SSVEP/prog/: parameter.ini  preferences.ini
src/bci_background/scripts/src/python/SSVEP/prog/Matlab_SsvepMov/SsvepMov_Sim01_5/: FFT.m  bci_Initialize.m  bci_Process.m  bci_Process0.m  updata_signal.m
src/bci_background/scripts/src/python/SSVEP/prog/Matlab_SsvepMov1/SsvepMov_Sim01_5/: BP_4_35_n96.mat  Hz_create_examine.m  bci_Construct.m  bci_Initialize.m  bci_Process.m  bci_StartRun.m  bci_StopRun.m
src/bci_background/scripts/src/python/SSVEP/prog/Matlab_SsvepMov2/SsvepMov_Sim01_5/: YY.mat  bci_Initialize.m  bci_Preflight.m  bci_Process.m  samplingrate.mat  ssvep_len.mat  tt.mat
src/bci_background/scripts/src/python/SSVEP/python/: Client.py  Server.py  Server2.py
src/bci_background/scripts/src/python/SSVEP/python/BCI2000Tools/: AudioSourceModule.py  Classification.py  DataFiles.py  FileReader.py  NIASourceModule.py  Parameters.py  PlaybackSourceModule.py  SpellerTools.py  __init__.py
src/bci_background/scripts/src/python/SSVEP/python/common/: BCIFunc.py  CtlObject.py  HzCreate.py  NewPrecisionTiming.py  counter.py
src/bci_background/scripts/src/python/SSVEP/python/common/pyBP/: bp.py  sigfunc.py  test.py  vep_demo.py
src/bci_background/scripts/src/python/SSVEP/新建文件夹/: getInfo.m  ind_end.mat  ssvep.m
src/bci_control/: CMakeLists.txt  package.xml
src/bci_control/include/: BCI_Mainwindow.h  robot2BCI.h
src/bci_control/source/: source.qrc
src/bci_control/src/: BCI_Mainwindow.cpp  BCI_Mainwindow.ui  main.cpp  robot2BCI.cpp
src/nubot_common/: CMakeLists.txt  package.xml  spawn_robots.sh
src/nubot_common/core/: Angle.hpp  Circle.hpp  Fieldinformation.hpp  Line.hpp  ball.hpp  common.hpp  core.hpp  define.hpp  robot.hpp
src/nubot_common/msgs/: AllocationInfo.msg  BCIInfo.msg  BallInfo.msg  GazeboInfo.msg  InterfaceInfo.msg  ObstaclesInfo.msg  OpponentInfo.msg  ResetInfo.msg  RobotInfo.msg  StrategyInfo.msg  TargetInfo.msg
src/nubot_control/: CMakeLists.txt  package.xml
src/nubot_control/cfg/: nubot_control.cfg
src/nubot_control/include/: behaviour.hpp  dribblestate.hpp  robot_control.hpp  role_assignment.hpp  subtargets.h
src/nubot_control/src/: behaviour.cpp  main.cpp  robot_control.cpp  role_assignment.cpp  subtargets.cpp
src/nubot_description/: CMakeLists.txt  package.xml
src/nubot_description/meshes/nubot_frame/: nubot_frame1.dae  nubot_frame2.dae  nubot_frame3.dae  nubot_frame4.dae  nubot_frame5.dae
src/nubot_description/meshes/rival_frame/: rival_frame1.dae  rival_frame2.dae  rival_frame3.dae  rival_frame4.dae  rival_frame5.dae
src/nubot_description/models/football/: model.sdf
src/nubot_description/models/nubot1/: model.sdf
src/nubot_description/models/rival1/: model.sdf
src/nubot_description/models/rival2/: model.sdf
src/nubot_description/models/rival3/: model.sdf
src/nubot_description/models/rival4/: model.sdf
src/nubot_description/worlds/: robocup15MSL.world
src/nubot_gazebo/: CMakeLists.txt  package.xml
src/nubot_gazebo/config/: global_config.yaml
src/nubot_gazebo/include/: ball_gazebo.h  nubot_gazebo.h  rival_gazebo.h  vector_angle.h
src/nubot_gazebo/launch/: game_ready.launch
src/nubot_gazebo/scripts/: robot_up.sh
src/nubot_gazebo/src/: ball_gazebo.cpp  nubot_gazebo.cpp  nubot_teleop_keyboard.cpp  rival_gazebo.cpp
