<?xml version="1.0"?>
<package>
  <name>nubot_common</name>
  <version>0.0.0</version>
  <description>The nubot common package</description>
  <maintainer email="nubot.nudt@outlook.com">nubot</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/nubot-nudt</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
