<?xml version="1.0"?>
<package>
  <name>nubot_gazebo</name>
  <version>0.0.0</version>
  <description>The nubot gazebo package</description>
  <maintainer email="nubot.nudt@outlook.com">nubot</maintainer>
  <author email="weidai_nudt@foxmail.com">weidai</author>
  <license>BSD</license>
  <url type="website">https://github.com/nubot-nudt</url>

  <buildtool_depend>catkin</buildtool_depend> 
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nubot_common</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>gazebo_ros</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nubot_description</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nubot_common</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
